fix: exit on escape, experience z-index

--- a/packages/gatsby-theme-carbon/src/components/FeedbackDialog/Experience.module.scss
+++ b/packages/gatsby-theme-carbon/src/components/FeedbackDialog/Experience.module.scss
@@ -44,6 +44,7 @@
   margin: 0;
   &:checked {
     outline: 1px solid var(--cds-ui-05);
+    z-index: 1;
   }
   &:focus {
     outline: 2px solid var(--cds-ui-05);
